--- a/data/boundaries/mapping.json
+++ b/data/boundaries/mapping.json
@@ -1,5 +1,11 @@
 {
   "regions": {
+    "成都市": {
+      "levels": {
+        "city": "https://geo.datav.aliyun.com/areas_v3/bound/510100.json"
+      },
+      "meta": { "source": "geo.datav.aliyun.com", "crs": "WGS84" }
+    },
     "成都市武侯区": {
       "levels": {
         "city": "https://geo.datav.aliyun.com/areas_v3/bound/510107.json"
